--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
             <h3>Nosso Público-Alvo:</h3>
             <div class="audience-grid">
                 <div class="audience-item">
-                    <img src="image.png" alt="Entusiastas de filmes">
+                    <img src="New world.png" alt="Entusiastas de filmes">
                     <p>Entusiastas de filmes de todas as idades.</p>
                 </div>
                 <div class="audience-item">
-                    <img src="publico-entretenimento.jpg" alt="Pessoas em busca de entretenimento">
+                    <img src="intern.png" alt="Pessoas em busca de entretenimento">
                     <p>Pessoas em busca de entretenimento de qualidade sob demanda.</p>
                 </div>
                 <div class="audience-item">
-                    <img src="publico-familias.jpg" alt="Famílias">
+                    <img src="kinko.png" alt="Famílias">
                     <p>Famílias procurando opções de lazer para todos os gostos.</p>
                 </div>
                 <div class="audience-item">
-                    <img src="publico-conveniencia.jpg" alt="Indivíduos que apreciam conveniência">
+                    <img src="rename.png" alt="Indivíduos que apreciam conveniência">
                     <p>Indivíduos que apreciam a conveniência de assistir quando e onde quiserem.</p>
                 </div>
             </div>
@@ -88,22 +88,22 @@
             <div class="strategy-item">
                 <h3>Estratégias de Venda:</h3>
                 <ul>
-                    <li>**Modelo de Assinatura:** Planos mensais e anuais com acesso ilimitado a todo o catálogo.</li>
-                    <li>**Marketing Digital:** Campanhas online segmentadas para alcançar os diferentes perfis de público.</li>
-                    <li>**Parcerias com Produtoras:** Acordos para oferecer conteúdo exclusivo e lançamentos antecipados.</li>
-                    <li>**Promoções e Testes Gratuitos:** Períodos de teste para novos usuários experimentarem a plataforma.</li>
-                    <li>**Marketing de Influência:** Colaboração com influenciadores digitais para promover o CineStream Prime.</li>
+                    <li>Modelo de Assinatura: Planos mensais e anuais com acesso ilimitado a todo o catálogo.</li>
+                    <li>Marketing Digital: Campanhas online segmentadas para alcançar os diferentes perfis de público.</li>
+                    <li>Parcerias com Produtoras: Acordos para oferecer conteúdo exclusivo e lançamentos antecipados.</li>
+                    <li>Promoções e Testes Gratuitos: Períodos de teste para novos usuários experimentarem a plataforma.</li>
+                    <li>Marketing de Influência: Colaboração com influenciadores digitais para promover o CineStream Prime.</li>
                 </ul>
             </div>
             <div class="strategy-item">
                 <h3>Diferenciais Competitivos:</h3>
                 <ul>
-                    <li>**Ampla Variedade de Conteúdo:** Milhares de filmes e séries de diversos gêneros e épocas.</li>
-                    <li>**Conteúdo Exclusivo:** Produções originais e parcerias que garantem conteúdo único.</li>
-                    <li>**Interface Intuitiva:** Navegação fácil e recursos de busca avançados para encontrar o que você procura.</li>
-                    <li>**Qualidade de Streaming:** Transmissão em alta definição (HD e 4K) com áudio imersivo.</li>
-                    <li>**Recomendações Personalizadas:** Algoritmos inteligentes que sugerem filmes e séries com base no seu histórico de visualização.</li>
-                    <li>**Visualização Offline:** Opção de baixar conteúdo para assistir sem internet.</li>
+                    <li>Ampla Variedade de Conteúdo: Milhares de filmes e séries de diversos gêneros e épocas.</li>
+                    <li>Conteúdo Exclusivo: Produções originais e parcerias que garantem conteúdo único.</li>
+                    <li>Interface Intuitiva: Navegação fácil e recursos de busca avançados para encontrar o que você procura.</li>
+                    <li>Qualidade de Streaming: Transmissão em alta definição (HD e 4K) com áudio imersivo.</li>
+                    <li>Recomendações Personalizadas: Algoritmos inteligentes que sugerem filmes e séries com base no seu histórico de visualização.</li>
+                    <li>Visualização Offline: Opção de baixar conteúdo para assistir sem internet.</li>
                 </ul>
             </div>
         </div>
