--- a/index.html
+++ b/index.html
@@ -141,15 +141,15 @@
     <section id="matriz-bcg" class="bcg-matrix">
         <div class="container">
             <h2>Posição na Matriz BCG</h2>
-            <p>Considerando o mercado altamente competitivo e a necessidade de investir pesadamente em conteúdo para ganhar market share, o CineStream Prime, como um novo entrante, se posicionaria inicialmente como um **Ponto de Interrogação (Question Mark)** na Matriz BCG. O objetivo estratégico seria investir agressivamente em conteúdo exclusivo e marketing para tentar alcançar um alto market share em um mercado de alto crescimento, transformando-o em uma **Estrela**.</p>
+            <p>
+                Considerando o mercado altamente competitivo e a necessidade de investir pesadamente em conteúdo para ganhar market share, o CineStream Prime, como um novo entrante, se posicionaria inicialmente como um <strong>Ponto de Interrogação (Question Mark)</strong> na Matriz BCG. O objetivo estratégico seria investir agressivamente em conteúdo exclusivo e marketing para tentar alcançar um alto market share em um mercado de alto crescimento, transformando-o em uma <strong>Estrela</strong>.
+            </p>
             <div class="bcg-diagram">
-                <p><strong>Alto Crescimento | Baixo Market Share: Ponto de Interrogação (CineStream Prime)</strong></p>
-                <p>Alto Crescimento | Alto Market Share: Estrela</p>
-                <p>Baixo Crescimento | Baixo Market Share: Vaca Leiteira</p>
-                <p>Baixo Crescimento | Alto Market Share: Abacaxi</p>
+                <img src="The BCG Matrix Market Growth Graph.png" alt="Matriz BCG" style="max-width: 100%; height: auto;">
             </div>
         </div>
     </section>
+    
 
     <section id="matriz-ansoff" class="ansoff-matrix">
         <div class="container">
