--- a/index.html
+++ b/index.html
@@ -90,33 +90,33 @@
             <div class="diferenciais-carousel-wrapper">
                 <div class="diferenciais-carousel">
                     <div class="diferencial-card">
-                        <img src="icon-exclusivo.png" alt="Conteúdo Exclusivo">
+                        <img src="Conteudo.png" alt="Conteúdo Exclusivo">
                         <p>Conteúdo exclusivo de produtoras independentes e parcerias internacionais.</p>
                     </div>
                     <div class="diferencial-card">
-                        <img src="icon-ia.png" alt="Inteligência Artificial">
+                        <img src="Inteligencia.png" alt="Inteligência Artificial">
                         <p>Recomendações personalizadas com inteligência artificial.</p>
                     </div>
                     <div class="diferencial-card">
-                        <img src="icon-offline.png" alt="Modo Offline">
+                        <img src="offline.png" alt="Modo Offline">
                         <p>Modo offline para assistir sem internet.</p>
                     </div>
                     <div class="diferencial-card">
-                        <img src="icon-preco.png" alt="Preço Acessível">
+                        <img src="preço.png" alt="Preço Acessível">
                         <p>Assinatura acessível com planos flexíveis.</p>
                     </div>
                     <div class="diferencial-card">
-                        <img src="icon-suporte.png" alt="Suporte 24/7">
+                        <img src="atendimento.png" alt="Suporte 24/7">
                         <p>Atendimento humanizado 24 horas por dia.</p>
                     </div>
             
                     <!-- Duplicados para criar efeito de loop infinito -->
                     <div class="diferencial-card">
-                        <img src="icon-exclusivo.png" alt="Conteúdo Exclusivo">
+                        <img src="Conteudo.png" alt="Conteúdo Exclusivo">
                         <p>Conteúdo exclusivo de produtoras independentes e parcerias internacionais.</p>
                     </div>
                     <div class="diferencial-card">
-                        <img src="icon-ia.png" alt="Inteligência Artificial">
+                        <img src="Inteligencia.png" alt="Inteligência Artificial">
                         <p>Recomendações personalizadas com inteligência artificial.</p>
                     </div>
                 </div>
